--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>ES6 presentation</title>
     <meta charset="UTF-8"/>
-    <script src="./script.js"></script>
+    <script type="module" src="file:///E:/my_projects/es6Presentation/codeExamples/script.js"></script>
   </head>
   <body>
     <input id="textInput" placeholder="enter text" type="text"/>
